# gulf

./: .ignore  Cargo.toml  README.md  tombi.toml
.helix/: languages.toml
crates/capture/: Cargo.toml
crates/capture-linux/: Cargo.toml
crates/capture-linux/src/: lib.rs  pw.rs  screen.rs
crates/capture-linux/src/pw/: buf.rs  choice.rs  pod.rs
crates/capture/src/: lib.rs  linux.rs
crates/core/: Cargo.toml
crates/core/src/: arc.rs  hint.rs  lib.rs  macros.rs  mem.rs  num.rs  rc.rs  task.rs  video.rs
crates/core/src/mem/: align.rs  layout.rs  layout_private.rs  mask.rs
crates/core/src/num/: pow2.rs
crates/core/src/task/: thread.rs
crates/list/: Cargo.toml
