[package]
name = "gulf-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
# gulf-core = { path = "../core/" }
# log = { workspace = true }
# tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }

# [target.'cfg(target_os = "linux")'.dependencies]
# ashpd = {
#   workspace = true,
#   features = ["pipewire", "tokio", "tracing", "wayland"]
# }
# libspa = { workspace = true, features = ["v1_2_0"] }
# pipewire = { workspace = true, features = ["v1_2_0"] }

[target.'cfg(target_os = "linux")'.dependencies]
gulf-capture-linux = {
  path = "../capture-linux",
}

[lints]
workspace = true
