[package]
name = "gulf-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = ["std", "tokio", "futures"]
alloc = []
std = ["alloc"]

tokio = ["dep:tokio", "std"]
futures = ["dep:futures", "std"]

# These are private features.
__generate = []

[lints]
workspace = true
